--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -44,7 +44,7 @@
                 %li 
                   = link_to "Frequently Asked Questions", content_by_name_path("frequently_asked_questions")  
                 %li
-                  = link_to "Definitions/Codebook", content_by_name_path("definitions")               
+                  = link_to "Glossary", content_by_name_path("glossary")               
             %li.dropdown
               %a.dropdown-toggle{href: "#", "data-toggle" => "dropdown"}
                 Visualize
