--- a/app/views/projects/_search_export.html.erb
+++ b/app/views/projects/_search_export.html.erb
@@ -24,12 +24,12 @@
         <% 
           display_params = {}
 
-          scope_val = (params["scope_names"] || ["All"] ).join(", ")
           #if no scope is present, scope defaults to all
-          scope_val = scope_val.gsub('_',' ').titleize
-          display_params["Scope"] = scope_val
+          scope_val = (params["scope_names"] || ["All"] ).join(", ")
+          params["scope_names"] = scope_val
+
           params.each do |param|
-            unless %w(action controller scope utf8).include?(param[0])
+            unless %w(action controller scope utf8 search).include?(param[0])
               key = param[0].to_s.gsub('_',' ').titleize
               value = param[1].to_s.gsub('_',' ').titleize
               key.gsub!(' String', '')
@@ -90,14 +90,16 @@
 
         <%
           if current_user
+            value_or_placeholder = "value"
             placeholder_string = current_user.email
           else
+            value_or_placeholder = "placeholder"
             placeholder_string = 'enter email'
           end
         %>
               
         <%= f.email_field :email, 
-          placeholder: placeholder_string,
+          value_or_placeholder.to_sym => placeholder_string,
           class: 'span3' %>
         <%= f.input :projects, as: :hidden, input_html: {value: @full_results.map(&:id)} %>
 
