--- a/app/views/projects/_search.html.erb
+++ b/app/views/projects/_search.html.erb
@@ -43,12 +43,21 @@
 		%>
 		<div id='facets'>
 			<div class='row-fluid'>
-				<p class='span12'>
-					<b>Filters:</b> 
-					<i>
-						<%= link_to_function "Unselect All", "$('.search_check').prop('checked', false); update_all_check_counts();" %>
-					</i>
-				</p>
+				<div class='span12'>
+					<p class='row-fluid'>
+						<b class='span2'>Filters:</b> 
+						
+						<i class=''>
+							<%= link_to_function "Unselect All", "$('.search_check').prop('checked', false); update_all_check_counts();" %>
+						</i>
+						|
+						<i class='muted'>
+							See the 
+							<%= link_to "glossary", content_by_name_path("glossary") %>
+							for field definitions.
+						</i>
+					</p>
+				</div>
 			</div>
 			<div class='row-fluid'>
 				<% first_part = (FACETS.count/3).round %>
