--- a/app/views/static_pages/_vital_stats.html.haml
+++ b/app/views/static_pages/_vital_stats.html.haml
@@ -16,11 +16,12 @@
 					%i Hover to see all stats
 			%ul.unstyled.marquee
 				%li
-					Chinese 
-					%strong
-						%a{href: "/projects?scope_names[]=Official Finance"}<>
+					%span
+						Chinese 
+					%strong><
+						%a{href: "/projects?scope_names[]=Official Finance"}><
 							official finance projects 
-						=":"
+					, 2000-2011:
 					%span.official#count.text-success
 						<%= official.count %>
 				%li
@@ -34,21 +35,25 @@
 					-# %small 
 						-# (USD-2009)
 				%li
-					Financial value of all
-					%strong
+					%span
+						Value of
+					%strong<>
 						%a{href: "/projects?&active_string=Active&oda_like_name=ODA-like"}<> 
 							ODA-Like commitments
-						= ":"
+					%span<>
+						, 2000-2011:
 					%span.oda_like#usd_2009.text-success
 						$<%= nice_money(oda_like.usd_2009) %>
 					-# %small
 						-# (USD-2009)
 				%li
-					Projects 
-					%strong 
+					%span
+						Projects 
+					%strong<> 
 						%a{href: "/projects?active_string=Active&status_name[]=Completion&status_name[]=Implementation"}<>
 							implemented or completed
-						= ":"
+					%span><
+						, 2000-2011:
 					%span.implemented_or_completed#percent.text-success
 						<%= implemented_or_completed.percent %>%
 				%li 
@@ -82,9 +87,10 @@
 					"Implementation"
 					"Pipeline: Commitment"
 					"Pipeline/identification"
-					"Pipeline: Pledge"
+					# "Pipeline: Pledge"
 					"Pipeline: Vague"
 				].join("*")
+				year: [2000..2011].join("*")
 
 		oda_like: 
 			params:
@@ -103,6 +109,7 @@
 					"Pipeline: Pledge"
 					"Pipeline: Vague"
 				].join("*")
+				year: [2000..2011].join("*")
 
 		implemented_or_completed:
 			params:
@@ -120,6 +127,7 @@
 					"Completion"
 					"Implementation"
 				].join("*")
+				year: [2000..2011].join("*")
 
 	returned_queries = 0
 
