--- a/app/views/shared/_twitter.html.erb
+++ b/app/views/shared/_twitter.html.erb
@@ -1,2 +1,2 @@
-<a class="twitter-timeline" href="https://twitter.com/AidData" data-widget-id="326425536299663360">Tweets by @AidData</a>
+<a class="twitter-timeline" href="https://twitter.com/search?q=%23chinainafrica+OR+from%3Aaiddata+OR+%40aiddata" data-widget-id="327475353985622016">Tweets about "#chinainafrica OR from:aiddata OR @aiddata"</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
