--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -120,14 +120,14 @@ home_paragraph = ""
 <% provide(:header_content, header_content.html_safe) %>
 
 <div class='container-fluid'>
-	<div class='row-fluid'>
+	<!--div class='row-fluid'>
 		<div class='span12'>
 			<h1 class='page-header'>
 				Chinese Finance in Africa
 			</h1>
 	
 		</div>
-	</div>
+	</div-->
 	<div class='row-fluid'>
 		<div class='span6'>
 			<%= carousel.html_safe 
