--- a/app/views/static_pages/map.html.erb
+++ b/app/views/static_pages/map.html.erb
@@ -2,7 +2,10 @@
 <% provide :title, "China in Africa" %>
 
 <h1 class='page-header'>
-	Country Perspective
+	Country Explorer
+	<small>
+		Click a country to learn more
+	</small>
 </h1>
 
 
