--- a/app/views/errors/error_404.haml
+++ b/app/views/errors/error_404.haml
@@ -1,5 +1,8 @@
 - provide(:title, "404")
-%h1.page-header.small 404
+%h1.page-header 
+  Page Not Found
+  %small
+    error code: 404
 %div
   %h2 We're Sorry
   %p
