--- a/app/views/errors/error_500.haml
+++ b/app/views/errors/error_500.haml
@@ -1,10 +1,15 @@
 - provide(:title, "500") 
-%h1.page-header.small Oops!
+%h1.page-header 
+  Oops!
+  %small 
+    error code: 500
 %div
-  %h2 Something went wrong
+  %h2 Something went wrong on our end
   %p
-    The site encountered an error.
+    You can either
+    %a{href: root_path} go back to the home page,
   %p
-    Want to
-    %a{href: root_path} go back to the home page
-    and try again?
+    or send us an
+    =link_to("email", "mailto:china@aiddata.org")
+    to let us know.
+    
