--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -240,9 +240,9 @@ h1, h2, h3, h4, h5, h6 {
   line-height: 1;
 }
 
-p {
-  font-size: 1em;
-}
+// p {
+//   font-size: 1em;
+// }
 
                                       /* footer */
 
