--- a/app/views/contents/show_by_name.html.haml
+++ b/app/views/contents/show_by_name.html.haml
@@ -1,13 +1,15 @@
 - provide :title, @content.name.titleize
 
-.row-fluid
-	.span12
-		%h1.page-header
-			= @content.name.titleize
-.row-fluid
-	.span12.site_content{style: "margin: auto, auto;"}
+- cache(@content) do
 
-		- if @content.content_type == "Complex Page"
-			#{eval(@content.content).html_safe}
-		- else
-			= Markdown.new(@content.content).to_html.html_safe
+	.row-fluid
+		.span12
+			%h1.page-header
+				= @content.name.titleize
+	.row-fluid
+		.span12.site_content{style: "margin: auto, auto;"}
+
+			- if @content.content_type == "Complex Page"
+				#{eval(@content.content).html_safe}
+			- else
+				= Markdown.new(@content.content).to_html.html_safe
