--- a/app/views/projects/_search.html.erb
+++ b/app/views/projects/_search.html.erb
@@ -60,28 +60,19 @@
 				</div>
 			</div>
 			<div class='row-fluid'>
-				<% first_part = (FACETS.count/3).round %>
-				<div class='span4'>
-					<ol>
-					<% FACETS[0..first_part].each do |f| %>
-						<%= render partial: 'projects/search_facet', locals: {f: f} %>
-					<% end %>
-					</ol>
-				</div>
-				<div class='span4'>
-					<ol>
-					<% FACETS[first_part+1..(2*first_part)].each do |f| %>
-						<%= render partial: 'projects/search_facet', locals: {f: f} %>
-					<% end %>
-					</ol>
-				</div>
-				<div class='span4'>
-					<ol>
-					<% FACETS[(2*first_part)+1..-1].each do |f| %>
-						<%= render partial: 'projects/search_facet', locals: {f: f} %>
-					<% end %>
-					</ol>
-				</div>
+				<% visible_facets = FACETS.select{|f| f[:name] != ""} %>
+				<% third = (visible_facets.count/3).round + 1 %>
+				<% visible_facets.each_slice(third) do |slice| %>
+
+					<div class='span4 pull-left'>
+						<ol>
+						<% slice.each do |f| %>
+							<%= render partial: 'projects/search_facet', locals: {f: f} %>
+						<% end %>
+						</ol>
+					</div>
+					
+				<% end %>
 			</div>
 			<% if current_user_is_aiddata %>
 				<div class='row-fluid'>			
