Restoring project sweeper

--- a/app/views/contents/show_by_name.html.haml
+++ b/app/views/contents/show_by_name.html.haml
@@ -1,6 +1,6 @@
 - provide :title, @content.name.titleize
 
-- cache(@content) do
+- cache(@content, expires_in: 20.minutes ) do
 
 	.row-fluid
 		.span12
