Search result caching

--- a/app/views/errors/error_500.haml
+++ b/app/views/errors/error_500.haml
@@ -10,6 +10,6 @@
     %a{href: root_path} go back to the home page,
   %p
     or send us an
-    =link_to("email", "mailto:china@aiddata.org")
+    =link_to("email", "mailto:china@aiddata.org?subject=Error 500 at #{request.fullpath}")
     to let us know.
     
