--- a/app/views/projects/_search_export.html.erb
+++ b/app/views/projects/_search_export.html.erb
@@ -4,6 +4,7 @@
     <a class="btn btn-success" data-toggle="modal" href="#export_dialog">
       Export as CSV (<%= pluralize(@search.total, "Project") %>)
     </a>
+    
     <% if current_user_is_aiddata %>
       <%= link_to "Quick Export (AidData only)", 
         "#{@current_url.gsub(/projects/, 'projects.csv')}", class: 'btn' %> 
@@ -26,7 +27,7 @@
 
           #if no scope is present, scope defaults to all
           scope_val = (params["scope_names"] || ["All"] ).join(", ")
-          params["scope_names"] = scope_val
+          display_params["scope_names"] = scope_val
 
           params.each do |param|
             unless %w(action controller scope utf8 search).include?(param[0])
