--- a/app/views/projects/_search_export.html.erb
+++ b/app/views/projects/_search_export.html.erb
@@ -24,12 +24,13 @@
         <% 
           display_params = {}
 
-          #if no scope is present, scope defaults to all
-          scope_val = (params["scope_names"] || ["All"] ).join(", ")
-          params["scope_names"] = scope_val
-
           params.each do |param|
             unless %w(action controller scope utf8 search).include?(param[0])
+              #format
+              if param[1].is_a? Array
+                param[1] = param[1].join(", ")
+              end
+
               key = param[0].to_s.gsub('_',' ').titleize
               value = param[1].to_s.gsub('_',' ').titleize
               key.gsub!(' String', '')
