--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -17,7 +17,7 @@ end
 end %>
 
 <% 
-	if params[:scope_names]
+	if params[:scope_names] && (params[:scope_names].is_a? Array)
 	  flash.now[:success] =  
 	  	"You are viewing <b>#{
 	  		params[:scope_names].map {|s| Scope.find_by_name(s).name}.join(' and ')
