--- a/app/views/projects/_search.html.erb
+++ b/app/views/projects/_search.html.erb
@@ -91,3 +91,22 @@
 			
 	<% end %>
 </div>
+<script>
+	function toggle_search_params() {
+		var facet_box = $('#facets')
+		var facet_button = $('#project-facets-button')
+		if (facet_box.is(":visible"))
+		{
+			facet_box.hide()
+			facet_button.show()
+
+		}
+		else {
+			facet_box.slideDown()
+			facet_button.slideUp()
+		}
+	}
+	<% if params[:utf8].blank? %>
+		toggle_search_params()
+	<% end %>
+</script>
