--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -48,8 +48,6 @@
                     = link_to "Download Files", content_by_name_path("downloads")
                   %li
                     = link_to "Aggregate Exporter", aggregate_export_path
-                  %li 
-                    = link_to "Geocoded Data <span class='text-warning'>Coming soon!</span>".html_safe, content_by_name_path("geocoding")
                   %li
                     = link_to "Web Service API", content_by_name_path("api_docs")
                   %li.divider
@@ -65,8 +63,10 @@
                   Visualize
                   %i.caret
                 %ul.dropdown-menu
+                  %li 
+                    = link_to "Geocoded Data", content_by_name_path("geocoding")
                   %li
-                    = link_to "Country-level map", map_path
+                    = link_to "Country-level Map", map_path
                   %li 
                     = link_to "Project bubbles", bubbles_path
               %li
