--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -45,6 +45,12 @@ html {
   overflow-y: scroll;
 }
 
+.recent_resources {
+
+  li {
+    margin-bottom: 10px;
+  }
+}
 .domain {
   visibility:hidden;
 }
