--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,137 +1,42 @@
 <% provide(:title, 'Home') %>
 
-<%= javascript_include_tag "holder/holder" %>
-
-<%
-
-carousel = <<EOS
-		<div id='home_carousel' class='carousel slide with_shadow'>
-		  <ol class='carousel-indicators'>
-		    <li data-target='#home_carousel' data-slide-to='0' class='active'></li>
-		    <li data-target='#home_carousel' data-slide-to='1'></li>
-		    <li data-target='#home_carousel' data-slide-to='2'></li>
-		  </ol>
-		  <div class='carousel-inner'>
-		    <div class='active item'>
-	    	    #{image_tag "home/darfur_map_zoom.png"}
-		    	<div class='carousel-caption'>
-		    		<h4>Geocoding: Coming Soon!</h4>
-		    		<p>See #{link_to "preliminary maps", content_by_name_path("geocoding")} of Chinese finance in Africa &rarr;</p>
-		    	</div>
-		    </div>
-		    <div class='item'>
-		    	#{image_tag "loan lifecycle.png"}
-		    	<div class='carousel-caption'>
-		    		<h4>Media-Based Data Collection</h4>
-		    		<p>Learn more about the #{link_to "methodology", content_by_name_path("methodology")} behind AidData's work &rarr;</p>
-		    	</div>
-		    </div>
-		    <div class='item'>
-		    	#{image_tag "home/drc_map.png"}
-		    	<div class='carousel-caption'>
-		    		<h4>Contribute to the Project</h4>
-		    		<p>Help us improve and expand the database!  #{link_to "Learn more here", content_by_name_path("improving_the_data")}.</p>
-		    	</div>
-		    </div>
-		  </div>
-		  <a class='carousel-control left' href='#home_carousel' data-slide='prev'>&lsaquo;</a>
-		  <a class='carousel-control right' href='#home_carousel' data-slide='next'>&rsaquo;</a>
-		</div>
-EOS
-
-vitals = <<EOS
-	<div class='row-fluid'>
-		#{render 'vital_stats'}
-	</div>
-EOS
-
-
-download_data = <<EOS
-	<div class='row-fluid'>
-		#{render 'download_data'}
-	</div>
-EOS
-	header_content = <<EOS
-
-
-EOS
-
-home_thumbnails = <<EOS
-			<div class='home_thumbnails'>
-				<ul class='inline thumbnails row-fluid'>
-					<li class='span6'>
-						<a href="/content/using_the_data" class="with_shadow thumbnail">
-							<h4>How to Use the Data</h4>
-							<img src='holder.js/100x100'>
-						</a>
-					</li>
-					<li class='span6'>
-						<a href="/content/improving_the_data" class="with_shadow thumbnail">
-							<h4>Help us Improve the Data</h4>
-							<img src='holder.js/100x100'>
-						</a>
-					</li>
-				</ul>
-			</div>
-EOS
-
-home_buttons = <<EOS
-			<div >
-				<div class='row-fluid' style="margin: 10px 0px 10px 0px;">
-					<span class='span4'>
-						<h4>
-							#{ link_to "How to Use the Data", content_by_name_path("using_the_data"), class: "btn btn-large btn-info" }
-						</h4>
-					</span>
-					<span class='span4'>
-						<h4>
-							#{link_to "Help us Improve the Data", content_by_name_path("improving_the_data"), class: "btn btn-large btn" }
-						</h4>
-					</span>
-					<span class='span4'>
-						<h4>
-							#{link_to "Coming Soon: Geocoded Data", content_by_name_path("geocoding"), class: "btn btn-large btn-warning" }
-						</h4>
-					</span>
-				</div>
-			</div>
-EOS
-home_data_list = <<EOS
-			
-				<ul class='unstyled inline row-fluid'>
-					<li class='span6'>
-						<h3>
-							#{ link_to "How to Use the Data", content_by_name_path("using_the_data") }
-						</h3>
-					</li>
-					<li class='span6'>
-							<h3>
-								#{link_to "Help us Improve the Data", content_by_name_path("improving_the_data") }
-							</h3>
-					</li>
-				</ul>
-
-EOS
-
-
-home_paragraph = ""
-%>
-
-<% provide(:header_content, header_content.html_safe) %>
 
 <div class='container-fluid'>
-	<!--div class='row-fluid'>
-		<div class='span12'>
-			<h1 class='page-header'>
-				Chinese Finance in Africa
-			</h1>
-	
-		</div>
-	</div-->
+
 	<div class='row-fluid'>
 		<div class='span6'>
-			<%= carousel.html_safe 
-			%>
+			<div id='home_carousel' class='carousel slide with_shadow'>
+			  <ol class='carousel-indicators'>
+			    <li data-target='#home_carousel' data-slide-to='0' class='active'></li>
+			    <li data-target='#home_carousel' data-slide-to='1'></li>
+			    <li data-target='#home_carousel' data-slide-to='2'></li>
+			  </ol>
+			  <div class='carousel-inner'>
+			    <div class='active item'>
+		    	    <%=image_tag "home/darfur_map_zoom.png"%>
+			    	<div class='carousel-caption'>
+			    		<h4>Geocoding: Coming Soon!</h4>
+			    		<p>See <%=link_to "preliminary maps", content_by_name_path("geocoding")%> of Chinese finance in Africa &rarr;</p>
+			    	</div>
+			    </div>
+			    <div class='item'>
+			    	<%=image_tag "loan lifecycle.png"%>
+			    	<div class='carousel-caption'>
+			    		<h4>Media-Based Data Collection</h4>
+			    		<p>Learn more about the <%=link_to "methodology", content_by_name_path("methodology")%> behind AidData's work &rarr;</p>
+			    	</div>
+			    </div>
+			    <div class='item'>
+			    	<%=image_tag "home/drc_map.png"%>
+			    	<div class='carousel-caption'>
+			    		<h4>Contribute to the Project</h4>
+			    		<p>Help us improve and expand the database!  <%=link_to "Learn more here", content_by_name_path("improving_the_data")%>.</p>
+			    	</div>
+			    </div>
+			  </div>
+			  <a class='carousel-control left' href='#home_carousel' data-slide='prev'>&lsaquo;</a>
+			  <a class='carousel-control right' href='#home_carousel' data-slide='next'>&rsaquo;</a>
+			</div>
 		</div>
 		<div id='stats-box' class='span6 container-fluid'>
 
@@ -147,7 +52,25 @@ home_paragraph = ""
 			</div>
 		</div>
 	</div>
-	<%= home_buttons.html_safe %>
+	<div >
+		<div class='row-fluid' style="margin: 10px 0px 10px 0px;">
+			<span class='span4'>
+				<h4>
+					<%= link_to "How to Use the Data", content_by_name_path("using_the_data"), class: "btn btn-large btn-info" %>
+				</h4>
+			</span>
+			<span class='span4'>
+				<h4>
+					<%=link_to "Help us Improve the Data", content_by_name_path("improving_the_data"), class: "btn btn-large btn" %>
+				</h4>
+			</span>
+			<span class='span4'>
+				<h4>
+					<%=link_to "Coming Soon: Geocoded Data", content_by_name_path("geocoding"), class: "btn btn-large btn-warning" %>
+				</h4>
+			</span>
+		</div>
+	</div>
 </div>
 
 <div class='row-fluid home_thumbnails'>
@@ -199,17 +122,7 @@ home_paragraph = ""
 			<h3>
 				Publications:
 			</h3>
-			<ul class='unstyled'>
-				<li>
-					<a href='#'>Exciting News article featuring our work!</a>
-				</li>
-				<li>
-					<a href='#'>Exciting News article featuring our work!</a>
-				</li>
-				<li>
-					<a href='#'>Exciting News article featuring our work!</a>
-				</li>
-			</ul>
+			<%= render 'latest_publications' %>
 		</div>
 	</div>	
 </div>
