Stop caching project index

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -13,7 +13,8 @@
 			  </ol>
 			  <div class='carousel-inner'>
 			    <div class='active item'>
-		    	    <%=image_tag "home/darfur_map_zoom.png"%>
+		    	    <iframe width="500" height="281" src="http://www.youtube.com/embed/2t8QH_q2PGs?rel=0" frameborder="0" allowfullscreen>
+		    	    </iframe>
 			    	<div class='carousel-caption'>
 			    		<h4>Geocoding: Coming Soon!</h4>
 			    		<p>See <%=link_to "preliminary maps", content_by_name_path("geocoding")%> of Chinese finance in Africa &rarr;</p>
