various sorry can't remember

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -12,11 +12,14 @@
 			    <li data-target='#home_carousel' data-slide-to='2'></li>
 			  </ol>
 			  <div class='carousel-inner'>
-			    <div class='active item'>
-		    	    <iframe width="500" height="281" src="http://www.youtube.com/embed/2t8QH_q2PGs?rel=0" frameborder="0" allowfullscreen>
-		    	    </iframe>
+			    <div class='active item' >
+			    	<iframe width="550" height="309" src="http://www.youtube.com/embed/2t8QH_q2PGs?rel=0" frameborder="0" allowfullscreen></iframe>
+
+			    </div>
+			    <div class='item'>
+		    	    <%=image_tag "home/drc_map.png"%>
 			    	<div class='carousel-caption'>
-			    		<h4>Geocoding: Coming Soon!</h4>
+			    		<h4>Geocoded Data: Coming Soon!</h4>
 			    		<p>See <%=link_to "preliminary maps", content_by_name_path("geocoding")%> of Chinese finance in Africa &rarr;</p>
 			    	</div>
 			    </div>
