--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -26,17 +26,18 @@
                 = link_to "Home", root_path
               %li.dropdown
                 %a.dropdown-toggle{href: "#", "data-toggle" => "dropdown"}
-                  About the Project
+                  About
                   %i.caret
                 %ul.dropdown-menu
+                  %li 
+                    = link_to "About the project", content_by_name_path("about_the_project")
                   %li 
                     = link_to "Meet the team", content_by_name_path("meet_the_team")
                   %li
                     = link_to "Methodology", content_by_name_path("methodology")
                   %li
                     = link_to "Contact", content_by_name_path("contact")
-                  %li 
-                    = link_to "Frequently Asked Questions", content_by_name_path("frequently_asked_questions")  
+                  
               %li.dropdown
                 %a.dropdown-toggle{href: "#", "data-toggle" => "dropdown"}
                   Data
@@ -55,7 +56,8 @@
                     = link_to "Using the Data", content_by_name_path("using_the_data")
                   %li
                     = link_to "Improving the Data", content_by_name_path("improving_the_data")  
-
+                  %li 
+                    = link_to "Frequently Asked Questions", content_by_name_path("frequently_asked_questions")  
                   %li
                     = link_to "Glossary", content_by_name_path("glossary")               
               %li.dropdown
