--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,23 +1,25 @@
 %header
-  .container
-    .row-fluid.visible-phone.header-upper      
-      .span6
-        %a#logo{ href: "http://aiddata.org"}
-          = image_tag "open_adt_small.png" 
-      .span6
-        %h3#tagline
-          Tracking Chinese Development Finance to Africa -
-          %span.beta-note
-            Beta
-    .row-fluid.hidden-phone.header-upper                       
-      .span9
-        %h1#tagline
-          Tracking Chinese Development Finance to Africa - 
-          %span.beta-note
-            Beta      
-      .span3
-        %a#logo{ href: "http://aiddata.org"}
-          = image_tag "open_adt_small.png"       
+  .container-fluid.no-padding
+    .row-fluid
+      .container  
+        .row-fluid.visible-phone.header-upper      
+          .span6
+            %a#logo{ href: "http://aiddata.org"}
+              = image_tag "open_adt_small.png" 
+          .span6
+            %h3#tagline
+              Tracking Chinese Development Finance to Africa -
+              %span.beta-note
+                Beta
+        .row-fluid.hidden-phone.header-upper                       
+          .span9
+            %h1#tagline
+              Tracking Chinese Development Finance to Africa - 
+              %span.beta-note
+                Beta      
+          .span3
+            %a#logo{ href: "http://aiddata.org"}
+              = image_tag "open_adt_small.png"       
       
 
 
