--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,6 @@
 <footer class="footer row-fluid">
   <small>
-    <a href="http://aiddata.org/"><%= image_tag "adt2_blue.png" %></a>
+    <a href="http://aiddata.org/"><%= image_tag "open_adt_small.png" %></a>
   </small>
   <nav>
     <ul>
