Style + content changes, implement files#show

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -4,7 +4,7 @@
   </small>
   <nav>
     <ul>
-      <li><%= link_to "About",   content_by_name_path("methodology") %></li>
+      <li><%= link_to "About",   content_by_name_path("about_the_project") %></li>
       <li><%= link_to "Contact", content_by_name_path("contact") %></li>
       <li><%= link_to "Blog", "http://blog.aiddata.org/" %></li>
       <li><%= link_to "Staff Login", staff_login_path %></li>
