--- a/app/views/shared/_recent.haml
+++ b/app/views/shared/_recent.haml
@@ -61,7 +61,7 @@
 
   $("#recent-changes").parent()
     .mouseenter(function() {
-      $('.change').show()
+      $('.change').slideDown()
     })
     .mouseleave(function() {
       normal_state()
