--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -14,20 +14,21 @@
 			    <li data-target='#home_carousel' data-slide-to='3'></li>
 			  </ol>
 			  <div class='carousel-inner'>
-			    <div class='active item' >
-			    	<iframe width="550" height="309" src="http://www.youtube.com/embed/2t8QH_q2PGs?rel=0" frameborder="0" allowfullscreen></iframe>
+
+
+			    <div class='active item'>
+		    	    <%=image_tag "home/sudan_heatmap.png"%>
+			    	<div class='carousel-caption'>
+			    		<h4>Coming Soon: Geocoded Data!</h4>
+			    		<p>See <%=link_to "preliminary maps", content_by_name_path("geocoding")%> of Chinese finance in Africa &rarr;</p>
+			    	</div>
+			    </div>
+			    <div class='item' >
+			    	<iframe width="100%" height="309" src="http://www.youtube.com/embed/2t8QH_q2PGs?rel=0" frameborder="0" allowfullscreen></iframe>
 			    	<div class='carousel-caption'>
 			    		<p>
 			    			 Co-Executive Director Brad Parks talks about the Media-Based Data Collection project.
 			    		</p>
-			    	</div>
-			    </div>
-
-			    <div class='item'>
-		    	    <%=image_tag "home/drc_map.png"%>
-			    	<div class='carousel-caption'>
-			    		<h4>Coming Soon: Geocoded Data!</h4>
-			    		<p>See <%=link_to "preliminary maps", content_by_name_path("geocoding")%> of Chinese finance in Africa &rarr;</p>
 			    	</div>
 			    </div>
 			    <div class='item'>
